kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mern 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: siddhartha54/foodmate-frontend:latest
          ports:
            - containerPort: 80      # nginx default port
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mern 
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80             # forward to nginx port 80 inside pod
      nodePort: 30001
